changes to yml structure

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,5 +44,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: src/Shopping.Api/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/shoppingapi:latest
