--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,6 +44,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: src/Shopping.Api/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/shoppingapi:latest
