--- a/src/Shopping.Api/appsettings.json
+++ b/src/Shopping.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MongoDB": {
+    "ConnectionString": "mongodb://host.docker.internal:27017", //"mongodb://localhost:27017",
+    "DatabaseName": "MyAppDb",
+    "CollectionName": "Users"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
