adding docker compose support

--- a/src/Shopping.Api/appsettings.json
+++ b/src/Shopping.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoDB": {
-    "ConnectionString": "mongodb://host.docker.internal:27017", //"mongodb://localhost:27017",
+    "ConnectionString": "mongodb://localhost:27017", //"mongodb://localhost:27017", //mongodb://host.docker.internal:27017
     "DatabaseName": "MyAppDb",
     "CollectionName": "Users"
   },
