--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,30 @@ services:
       - MongoDB__ConnectionString=mongodb://mongo:27017
       - MongoDB__DatabaseName=MyAppDb
       - MongoDB__CollectionName=Users
+      - NotificationService__BaseUrl=http://notificationapi
     depends_on:
       - mongo
+      - notificationapi
+    networks:
+      - app-network
+
+  notificationapi:
+    build:
+      context: ./src/Notification.Api
+      dockerfile: Dockerfile
+    image: notificationapi
+    container_name: notificationapi
+    ports:
+      - "5001:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - MongoDB__ConnectionString=mongodb://mongo:27017
+      - MongoDB__DatabaseName=MyAppDb
+      - MongoDB__CollectionName=Notifications
+    depends_on:
+      - mongo
+    networks:
+      - app-network
 
   mongo:
     image: mongo:7
@@ -25,6 +47,12 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    networks:
+      - app-network
 
 volumes:
   mongo_data:
+
+networks:
+  app-network:
+    driver: bridge
