--- a/src/Shopping.Api/appsettings.json
+++ b/src/Shopping.Api/appsettings.json
@@ -10,5 +10,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NotificationService": {
+    "BaseUrl": "http://localhost:5001"
+  }
 }
