--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,8 +70,8 @@ stages:
             inputs:
               action: deploy
               manifests: |
-                $(Pipeline.Workspace)/manifests/deployment.yml
-                $(Pipeline.Workspace)/manifests/service.yml
+                $(Pipeline.Workspace)/aks/deployment.yml
+                $(Pipeline.Workspace)/aks/service.yml
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
