--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
 variables:
 
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'shopping-aks-connection'
+  dockerRegistryServiceConnection: 'd4f432af-0cb0-4ba6-8206-363d758eb252'
   imageRepository: 'shoppingapi'
   containerRegistry: 'matheuandrade.azurecr.io'
   dockerfilePath: '**/Dockerfile'
